cicd/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: my-backend-app
        image: public.ecr.aws/a5z6u3o2/java-cicd:3
        ports:
        - containerPort: 8080
