cicd/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: my-frontend-app
        image: public.ecr.aws/a5z6u3o2/react-cicd:10
        ports:
        - containerPort: 80
